# Liner2D

./: CMakeLists.txt  README.md  main.cpp  result.geo  test.msh  test2.msh
include/: GridWindow.h  MainWindow.h  Point.h  Polygon.h
src/: GridWindow.cpp  MainWindow.cpp  Point.cpp  Polygon.cpp
